--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,6 +2,16 @@ specVersion: "2.5"
 metadata:
   name: ecastella.karmaqunit
 type: application
+framework:
+    name: SAPUI5
+    version: 1.76.1
+    libraries:
+        - name: sap.ui.core
+        - name: sap.m
+        - name: sap.f
+        - name: sap.tnt
+        - name: sap.ui.layout
+        - name: themelib_sap_fiori_3
 server:
   customMiddleware:
     - name: fiori-tools-proxy
