--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,6 +2,10 @@ specVersion: "2.5"
 metadata:
   name: ecastella.karmaqunit
 type: application
+resources:
+    configuration:
+        paths:
+            webapp: webapp
 framework:
     name: SAPUI5
     version: 1.76.1
